--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Checkerboard Assignment</title>
+  <title>SurveyForm Assignment</title>
 </head>
 
 <body>
